--- a/radio/src/translations/es.h.txt
+++ b/radio/src/translations/es.h.txt
@@ -694,6 +694,7 @@
 #define TR_LIMIT                       INDENT"Límite"
 #define TR_MINRSSI                     "Min Rssi"
 #define TR_FLYSKY_TELEMETRY            TR("FlySky RSSI #", "Use FlySky RSSI value without rescalling")
+#define TR_FLYSKY_VARIO                "Activation Vario FlySky"
 #define TR_LATITUDE                    "Latitud"
 #define TR_LONGITUDE                   "Longitud"
 #define TR_GPS_COORDS_FORMAT           TR("Coords GPS", INDENT "Formato coordenadas")
